Fixed map not showing

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,7 @@
 .container > div:nth-child(2) {
   height: calc(100% - 45px);
 }
+
+.map-container > div {
+  height: 100%;
+}
